--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.0",
     "libphonenumber-js": "^1.10.26",
     "mongoose": "^7.0.3",
+    "mongoose-intl-phone-number": "^1.1.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1"
   },
